fix lang img align. add social metadata

--- a/css/styles.css
+++ b/css/styles.css
@@ -718,3 +718,10 @@ img.language:hover, img.language.choose{
   -webkit-box-shadow: 0 0 10px #fff;
   box-shadow: 0px 0px 10px #fff;
 }
+img.language{
+	/*display: inline-block;*/
+	cursor:pointer;
+	/*padding: 15px 15px;*/
+	font-size: 18px;
+	line-height: 20px;
+}
